--- a/public/css/imports/extras.css
+++ b/public/css/imports/extras.css
@@ -23,7 +23,7 @@
 .page-link,
 .page-link:hover,
 .page-link:focus {
-  color: #1ABC9C;
+  color: #2a8e9e;
 }
 
 .btn-link:hover, .btn-link:focus {
@@ -69,14 +69,14 @@
 .page-link:hover,
 .page-link:focus {
   color: #FFF !important;
-  background-color: #1ABC9C !important;
-  border-color: #1ABC9C !important;
+  background-color: #2a8e9e !important;
+  border-color: #2a8e9e !important;
 }
 
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  background-color: #1ABC9C;
+  background-color: #2a8e9e;
 }
 
 label.radio, label.checkbox {
