--- a/public/css/imports/shortcodes/counter-skills.css
+++ b/public/css/imports/shortcodes/counter-skills.css
@@ -115,7 +115,7 @@ body:not(.device-touch) .rounded-skill {
   left: 0;
   width: 0;
   height: 100%;
-  background-color: #1ABC9C;
+  background-color: #2a8e9e;
   overflow: visible !important;
   border-radius: 2px;
   -webkit-transition: width 1.2s ease-in-out;
