--- a/public/css/imports/typography.css
+++ b/public/css/imports/typography.css
@@ -24,19 +24,19 @@ em {
 }
 
 ::selection {
-  background: #1ABC9C;
+  background: #2a8e9e;
   color: #FFF;
   text-shadow: none;
 }
 
 ::-moz-selection {
-  background: #1ABC9C;
+  background: #2a8e9e;
   color: #FFF;
   text-shadow: none;
 }
 
 ::-webkit-selection {
-  background: #1ABC9C;
+  background: #2a8e9e;
   color: #FFF;
   text-shadow: none;
 }
@@ -57,7 +57,7 @@ body {
 
 a {
   text-decoration: none !important;
-  color: #1ABC9C;
+  color: #2a8e9e;
 }
 a:hover {
   color: #222;
@@ -129,7 +129,7 @@ h3 > span:not(.nocolor):not(.badge),
 h4 > span:not(.nocolor):not(.badge),
 h5 > span:not(.nocolor):not(.badge),
 h6 > span:not(.nocolor):not(.badge) {
-  color: #1ABC9C;
+  color: #2a8e9e;
 }
 
 p,
