--- a/public/css/imports/utilities.css
+++ b/public/css/imports/utilities.css
@@ -138,15 +138,15 @@ span.middot {
 
 .bg-color,
 .bg-color #header-wrap {
-  background-color: #1ABC9C !important;
+  background-color: #2a8e9e !important;
 }
 
 .color {
-  color: #1ABC9C !important;
+  color: #2a8e9e !important;
 }
 
 .border-color {
-  border-color: #1ABC9C !important;
+  border-color: #2a8e9e !important;
 }
 
 .nott {
@@ -420,7 +420,7 @@ span.middot {
 
 .h-text-color:hover,
 a.h-text-color:hover {
-  color: #1ABC9C !important;
+  color: #2a8e9e !important;
 }
 
 /* ----------------------------------------------------------------
@@ -432,7 +432,7 @@ a.h-text-color:hover {
 }
 
 .h-bg-color:hover {
-  background-color: #1ABC9C !important;
+  background-color: #2a8e9e !important;
 }
 
 .h-nobg:hover {
