--- a/public/css/style-rtl.css
+++ b/public/css/style-rtl.css
@@ -647,7 +647,7 @@ Header
 	.dots-menu .page-menu-item div::after {
 		right: auto;
 		left: -5px;
-		border-right: 6px solid #1abc9c;
+		border-right: 6px solid #2a8e9e;
 		border-left: 0;
 	}
 	.dots-menu .page-menu-item > a:hover div {
@@ -2291,14 +2291,14 @@ blockquote.float-end {
 -----------------------------------------------------------------*/
 .title-block {
 	padding: 2px 20px 3px 0px;
-	border-right: 7px solid #1abc9c;
+	border-right: 7px solid #2a8e9e;
 	border-left: 0;
 }
 
 .title-block-right {
 	padding: 2px 0px 3px 20px;
 	border-right: 0;
-	border-left: 7px solid #1abc9c;
+	border-left: 7px solid #2a8e9e;
 	text-align: left;
 }
 
